# MovingBall

./: CMakeLists.txt
include/: BallMove.h  ImageInformation.h  ImageProcessing.h
src/: BallMove.cpp  ImageInformation.cpp  ImageProcessing.cpp  main.cpp
